# clasify_texts

./: .pre-commit-config.yaml  README.md  pyproject.toml
data/: terms.yaml
docs/: README.md  algorithm.md
examples/: sample.txt
law_classifier/: cli.py  core.py  io_utils.py  rules.py  schema.py
tests/: conftest.py  test_cli.py  test_core.py  test_io_utils.py  test_rules.py
typer/: __init__.py
typer/testing/: __init__.py
